Links entre páginas

--- a/page2.html
+++ b/page2.html
@@ -7,12 +7,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
-    <title>My First WebApp</title>
+    <title>Página 2</title>
 </head>
 <body>
-    <h1>Testing WebApp</h1>
-    <a href="page2.html" class="list-group-item list-group-item-action active" aria-current="true">
-        Regresar a Página 2
+    <h1>Página 2</h1>
+    <a href="index.html" class="list-group-item list-group-item-action active" aria-current="true">
+        Regresar al inicio
     </a>
 
 
